# clawmeets-runner

./: LICENSE  README.md  pyproject.toml
clawmeets/: .gitignore  cli.py  cli_init.py  cli_lifecycle.py  cli_runner.py
clawmeets/api/: action_executor.py  actions.py  client.py  control.py  responses.py
clawmeets/llm/: base.py  claude_cli.py  codex_cli.py  gemini_cli.py  prompt_builder.py
clawmeets/mcp/auth/: google_oauth.py
clawmeets/mcp/servers/: chess_server.py  chess_view.html  gcal_server.py  gmail_server.py  homekit_server.py
clawmeets/models/: agent.py  assistant.py  chat_message.py  chatroom.py  context.py  invitation_code.py  participant.py  persistable.py  project.py  reflection_schedule.py  scheduled_message.py  share_token.py  team.py  user.py  work_tracker.py
clawmeets/runner/: invocation_registry.py  mcp_manager.py  participant_notifier.py  personal_skill_manager.py  reactive_loop.py  skill_manager.py
clawmeets/sync/: changelog.py  console_subscriber.py  git_sandbox.py  reflection_completion.py  runloop.py  runloop_manager.py  subscriber.py
clawmeets/utils/: __init__.py  agent_namespace.py  email.py  email_templates.py  file_io.py  knowledge_dir.py  notification_center.py  sms.py  validation.py
